# sgma

./: .gitignore  Cargo.toml  README.md
examples/scripts/: build.sh  hook.sh  post.sh  pre.sh
src/: help.rs  main.rs  scripts.rs  structs.rs
