[package]
name = "sgma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libdlta = { git = "https://git.tar.black/ikeda/libdlta" }
toml = { version = "0.5.8", default-features = false }
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
tar = { version = "0.4.0", default-features = false }
zstd_util = { version = "0.1.1", default-features = false }
